--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -24,6 +24,16 @@
     margin-top: 320px;
     margin-left: 60px;
 }
+button{
+    position: absolute;
+    width:120px;
+    height: 40px;
+    margin-top: 400px;
+    margin-left: 350px;
+    border: none;
+    border-radius: 5px;
+}
+
 body{
     margin: 0px;
 }
