--- a/src/pages/Header.css
+++ b/src/pages/Header.css
@@ -6,26 +6,29 @@
     display: flex;
     z-index: 100;
 }
-
-.header__link{
-    color: #ffffff;
-    position: sticky;
-}
-
 .header__logo{
     width: 100px;
     margin: 0 20px;
     margin-top: 15px;
     object-fit: contain;
+    padding-right: 750px;
 }
 
 .header__link{
     color: white;
     text-decoration: none;
+    padding-right: 30px;
 }
 
 .header__aboutText{
     font-size: 25px;
 }
+.header__nav{
+    display: flex;
+}
+.header__loginText{
+    font-size: 25px;
+}
+
 
 
