--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,7 +1,7 @@
 .video__bg{
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     object-fit: cover;
     margin: 0;
 }
@@ -36,4 +36,10 @@ button{
 
 body{
     margin: 0px;
+}
+
+.contact{
+    position: absolute;
+    color: black;
+    margin: 620px;
 }
