--- a/src/pages/Header.css
+++ b/src/pages/Header.css
@@ -1,33 +1,81 @@
 .header{
-    background-color: #131921;
+    background-color: black;
+    display: flex;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    height: 80px;
+    z-index: 200;
+    width: 100%;
+}
+
+.header__link{
+    color: #ffffff;
+    position: sticky;
+}
+
+.header__basketCount{
+    margin-right: 10px;
+    margin-left: 10px;
+    position: sticky;
+}
+
+.header__optionBasket{
+    display: flex;
     align-items: center;
     position: sticky;
-    top: 0;
-    display: flex;
-    z-index: 100;
 }
+
+.header__option{
+    display: flex;
+    flex-direction: column;
+    margin-left: 10px;
+    margin-right: 10px;
+    position: sticky;
+}
+
+.header__optionLineOne{
+    font-size: 10px;
+    font-size: 15px;
+}
+
 .header__logo{
     width: 100px;
     margin: 0 20px;
     margin-top: 15px;
     object-fit: contain;
-    padding-right: 750px;
+}
+.header__loginIcon{
+    color: white;
+}
+.header__aboutIcon{
+    color: white;
+}
+.header__contactIcon{
+    color: white;
 }
 
 .header__link{
     color: white;
     text-decoration: none;
-    padding-right: 30px;
 }
 
-.header__aboutText{
-    font-size: 25px;
-}
 .header__nav{
+    margin-left: 850px;
     display: flex;
+    justify-content: space-evenly;
 }
-.header__loginText{
-    font-size: 25px;
+
+.header__searchInput{
+    height: 12px;
+    border: none;
+    padding: 10px;
+    width: 100%;
+    min-width: 20px;
+}
+.link:hover{
+    text-decoration: none;
+    color: white;
 }
 
 
