--- a/src/pages/SignUp.css
+++ b/src/pages/SignUp.css
@@ -1,7 +1,7 @@
 .background{
     position: absolute;
     width: 100%;
-    height: 100;
+    height: 100vh;
     z-index: -1;
     opacity: 0.7;
 }
